--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -1,5 +1,48 @@
+body,
+button,
+input,
+select,
+textarea {
+	color: $color__text-main;
+	font-family: $font__main;
+	@include font-size(1);
+	line-height: $font__line-height-body;
+}
+h1, h2, h3, h4, h5, h6 {
+	clear: both;
+}
 p {
 	margin-bottom: 1.5em;
+}
+
+ul, ol {
+	margin: 0 0 1.5em 3em;
+}
+
+ul {
+	list-style: disc;
+}
+
+ol {
+	list-style: decimal;
+}
+
+li > ul,
+li > ol {
+	margin-bottom: 0;
+	margin-left: 1.5em;
+}
+table {
+	margin: 0 0 1.5em;
+	width: 100%;
+}
+
+dt {
+	font-weight: bold;
+}
+
+dd {
+	margin: 0 1.5em 1.5em;
 }
 
 dfn, cite, em, i {
