--- a/sass/style.scss
+++ b/sass/style.scss
@@ -22,6 +22,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 
 @import "variables.scss";
 @import "mixins.scss";
+@import "susy";
 @import "normalize.scss";
 @import "typography.scss";
 @import "accessibility.scss";
