--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,20 +1,27 @@
 .content-area {
 	float: left;
 	margin: 0 (-$size__site-sidebar) 0 0;
-	width: $size__site-main;
+	// width: $size__site-main;
+	@include span(17);
+	@include breakpoint(small) {
+		@include span(24);	
+	}
 }
 
 .site-main {
-	margin: 0 $size__site-sidebar 0 0;
+	// margin: 0 $size__site-sidebar 0 0;
 }
 
 .site-content .widget-area {
 	float: right;
 	overflow: hidden;
-	width: $size__site-sidebar;
+	@include span(6 last);
+	@include breakpoint(small) {
+		@include span(24);	
+	}
 }
 
 .site-footer {
 	clear: both;
-	width: $size__site-main;
+	@include span(24);
 }
