--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,6 +23,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "variables.scss";
 @import "mixins.scss";
 @import "susy";
+@import "susy_settings.scss";
 @import "normalize.scss";
 @import "typography.scss";
 @import "accessibility.scss";
