--- a/sass/style.scss
+++ b/sass/style.scss
@@ -31,6 +31,8 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "clearings.scss";
 @import "navigation.scss";
 @import "links.scss";
+@import "header.scss";
+@import "sidebar.scss";
 @import "buttons.scss";
 @import "flexbox.scss";
 @import "form_fields.scss";
