--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -1,23 +1,29 @@
 .main-navigation {
 	clear: both;
+	margin-bottom: gutter(3);
 	display: block;
 	float: left;
 	width: 100%;
-
+	border: $border__5;
+	// background-color: black;
+	.menu {
+		max-width: span(18);
+		margin: 0 auto;
+		text-align: center;
+	}
 	ul {
-		display: none;
-		list-style: none;
-		margin: 0;
-		padding-left: 0;
 
+		list-style: none;
+		padding-left: 0;
 		ul {
 			box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+			background-color: black;
+			max-width: 100%;
 			float: left;
 			position: absolute;
-			top: 1.5em;
+			top: 2.8em;
 			left: -999em;
 			z-index: 99999;
-
 			ul {
 				left: -999em;
 				top: 0;
@@ -31,7 +37,9 @@
 			}
 
 			a {
-				width: 200px;
+				color: white;
+				min-width: span(6);
+				width: 100%;
 			}
 
 			:hover > a,
@@ -51,13 +59,15 @@
 	li {
 		float: left;
 		position: relative;
-
 		&:hover > a,
 		&.focus > a {
 		}
 	}
 	a {
+		padding:$padding;
 		display: block;
+		text-transform: uppercase;
+		font-weight: 100;
 		text-decoration: none;
 	}
 
